--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_styled_toast: ^2.2.1
   provider: ^6.1.2
   simple_icons: ^10.1.3
-  cherry_toast: ^1.11.0
+  drop_down_search_field: ^1.0.4
 
 dev_dependencies:
   flutter_test:
