--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.1.2
   simple_icons: ^10.1.3
   drop_down_search_field: ^1.0.4
+  firebase_core: ^3.2.0
+  firebase_core_web: ^2.17.3
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
