--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core_web: ^2.17.3
   firebase_auth: ^5.1.2
   cloud_firestore: ^5.1.0
+  multi_dropdown: ^2.1.4
 
 dev_dependencies:
   flutter_test:
