--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   multi_dropdown: ^2.1.4
   intl: ^0.19.0
+  async: ^2.11.0
 #  multi_dropdown: ^2.1.4
 
 dev_dependencies:
