--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   multi_dropdown: ^2.1.4
   intl: ^0.19.0
-  async: ^2.11.0
+  rxdart: ^0.28.0
 #  multi_dropdown: ^2.1.4
 
 dev_dependencies:
@@ -73,6 +73,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/pyramid.jpg
+    - assets/noDepartment.png
+    - assets/pending.png
+    - assets/rejected.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
