--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   multi_dropdown: ^2.1.4
   intl: ^0.19.0
   rxdart: ^0.28.0
+  printing: ^5.13.1
+  pdf: ^3.11.1
 #  multi_dropdown: ^2.1.4
 
 dev_dependencies:
